# PyTorch-libtorch-build-example

./: CMakeLists.txt  README.md
